--- a/home2.html
+++ b/home2.html
@@ -14,6 +14,7 @@
 
 <body>
     <h1><영화 DB 분류 페이지></h1>
+	vscode에서 수정함.
 	<div id = "setting">
         
 		<fieldset class="field" id="set-standard" >
