툴팁 어케 해 ㅜㅜ

--- a/home2.html
+++ b/home2.html
@@ -25,16 +25,16 @@
         <fieldset class="field" id="set-range">
 			<legend>범주 설정</legend> 
 			<label for="date-range">기간</label> 
-			<input type="number" name="date-range" id="start" min="1980" max="2020" value="2015"> ~
-			<input type="number" name="date-range" id="end" min="1980" max="2020" value="2016">
+			<input type="number" name="date-range" id="start" min="1980" max="2020" value="2010"> ~
+			<input type="number" name="date-range" id="end" min="1980" max="2020" value="2015">
 			<br>
 			<label>국가</label>
-			<input type="checkbox" name="countryAll" id="coun_all" onclick='selectAll2(this)'checked >전체
+			<input type="checkbox" name="countryAll" id="coun_all" onclick='selectAll2(this)' >전체
 			<input type="checkbox" name="country" id="kor"value="22041011" onclick='check2(this)' checked>한국
 			<input type="checkbox" name="country" id="us"value="22042002" onclick='check2(this)' checked>미국
 			<input type="checkbox" name="country" id="eng"value="22044010" onclick='check2(this)' checked>영국
-			<input type="checkbox" name="country" id="jap"value="22041008" onclick='check2(this)' checked>일본
-			<input type="checkbox" name="country" id="chi"value="22041009" onclick='check2(this)' checked>중국
+			<input type="checkbox" name="country" id="jap"value="22041008" onclick='check2(this)' >일본
+			<input type="checkbox" name="country" id="chi"value="22041009" onclick='check2(this)' >중국
 			<br>
 			<label>장르</label>
 			<input type="checkbox" name="genreAll" id="gen_all" onclick='selectAll(this)'checked >전체
