--- a/home2.html
+++ b/home2.html
@@ -69,7 +69,13 @@
 			<img src="Spinner.gif" alt="Loading..." />
 		</div> -->
 
-		<div id="result_chart" style="position: relative; z-index:2" >
+		<div id="result_chart">
+            <div id="fade" class="black_background"  >
+            <div class="loadingio-spinner-wedges-ynx2h61thk"><div class="ldio-2hgux1lg16z">
+                <div><div><div></div></div><div><div></div></div><div><div></div></div><div><div></div></div></div>
+                </div>
+            </div>   
+            </div>   
 			<canvas id="line-chart" width=400 height="300"></canvas>
 		</div>
 		<div class="btns">
