--- a/test.html
+++ b/test.html
@@ -52,7 +52,25 @@
     function deltool() 
     {
     }
-        
+
+    function getRandomColor(_isAlpha) {
+        let r = getRand(0, 255),
+        g = getRand(0, 255),
+        b = getRand(0, 255),
+        a = 0.5;
+
+        let rgb = _isAlpha ? 'rgba' : 'rgb';
+        rgb += '(' + r + ',' + g + ',' + b;
+        rgb += _isAlpha ? ',' + a + ')' : ')';
+
+        return rgb;
+    };
+    
+    function getRand(min, max) {
+        if (min >= max) return false;
+        return ~~(Math.random() * (max - min + 1)) + min;
+    };
+
     function draw(type) {
         console.log("draw! is first?" + first_time);
         let my_datasets = [];
@@ -82,7 +100,6 @@
             }
         }
 
-
         if (first_time) {
             first_time = false;
         }
@@ -90,16 +107,32 @@
             myChart.destroy();
         }
 
+        let bckColor = [];
+        let hvbckColor = [];
+        for (let i = 0; i < label.length; i++) {
+            let r = getRand(0, 255),
+            g = getRand(0, 255),
+            b = getRand(0, 255),
+            a = 0.1;
+
+            let rgba = 'rgba' + '(' + r + ',' + g + ',' + b + ',' + a + ')';
+            let rgb = 'rgb' + '(' + r + ',' + g + ',' + b + ')';
+
+            bckColor.push(rgba);
+            hvbckColor.push(rgb);
+        }
+
         // dataset 설정하기. 랜덤 색
         for (let i = 0; i < label.length; i++) {
             let color = '#' + Math.round(Math.random() * 0xffffff).toString(16);
             my_datasets[i] = {
-                label: label[i],
-                data: reverse[i],
-                borderColor: color,
-                borderWidth: '2',
-                backgroundColor: 'white',
-                hoverBackgroundColor: color,
+                label: standards[i],
+                data: reverse[label.length-1-i],
+                title: standards[i],
+                borderColor: hvbckColor,
+                borderWidth: '1',
+                backgroundColor: bckColor,
+                hoverBackgroundColor: hvbckColor,
             }
         }
 
@@ -107,22 +140,44 @@
         let newtool = false;
 
         myChart = new Chart(document.getElementById('line-chart').getContext('2d'), {
-            type: 'pie',
+            type: 'doughnut',
             data: {
-                labels: label,
+                labels: ['한','미','영','전'],
                 datasets: my_datasets
+
+
+                // datasets: [{
+                //     label: '2010',
+                //     data: reverse[0], //4개 값
+                //     // //title: standards[i],
+                //     borderColor : ['red','yellow','blue','green'],
+                //     //borderColor: '#' + Math.round(Math.random() * 0xffffff).toString(16),
+                //     borderWidth: '1',
+                //     backgroundColor: ['white','white','white','white'],
+                //     hoverBackgroundColor : ['red','yellow','blue','green'],
+                // },{
+                //     label: '2011',
+                //     data: reverse[1], //4개 값
+                //     // //title: standards[i],
+                //     borderColor : ['red','yellow','blue','green'],
+                //     //borderColor: '#' + Math.round(Math.random() * 0xffffff).toString(16),
+                //     borderWidth: '1',
+                //     backgroundColor: ['white','white','white','white'],
+                //     hoverBackgroundColor : ['red','yellow','blue','green'],
+                // }]
             },
             options: {
                 plugins: {
                     tooltip: {
                         callbacks: {
-                        title: function(context) {
-                            return 'dd';
-
-                        },
-                },
+                            title: function(context) {
+                                return context[0].dataset.label;
+                            }
+                        }
+                    },
+                }
             }
-        }}});
+        });
     }
 // external: function (context) {
                     //     newtool = true;
