--- a/final/index.html
+++ b/final/index.html
@@ -14,62 +14,34 @@
 </head>
 
 <body>
-    <h1><영화 DB 분류 페이지></h1>
+	<h1><영화 DB 분류 페이지></h1>
 	<div id = "setting">
-		<fieldset class="field" id="set-standard">
+		<fieldset   id="set-standard">
 			<legend>기준 설정</legend>
 			<input type="radio" name="standard" id="std_country" value="국가별" checked>국가별
 			<input type="radio" name="standard" id="std_genre" value="장르별">장르별
 			<input type="radio" name="standard" id="std_type" value="유형별">유형별
 		</fieldset>
-
-        <fieldset class="field" id="set-range">
+       	<fieldset id="set-range">
 			<legend>범주 설정</legend> 
 			<div>
-				<label for="date-range">기간</label> 
-                <input type="number" name="date-range" id="start" min="1980" max="2021" value="2015"> ~
-                <input type="number" name="date-range" id="end" min="1980" max="2021" value="2016">
-              
-                    <!-- <input type="text" class="yearpicker form-control"  value="">
-                    <input type="text"  id ="a" value="2021">
-
-                    <div class="yearpicker-container yearpicker-dropdown hide">
-                    <div class="yearpicker-header">
-                        <div class="yearpicker-prev" data-view="yearpicker-prev">‹</div>
-                        <div class="yearpicker-current" data-view="yearpicker-current">2021</div>
-                        <div class="yearpicker-next" data-view="yearpicker-next">›</div>
-                    </div>
-                    <div class="yearpicker-body">
-                        <ul class="yearpicker-year" data-view="years">
-                            <li class="yearpicker-items " data-view="yearpicker-items">2016</li> 
-                            <li class="yearpicker-items " data-view="yearpicker-items">2017</li> 
-                            <li class="yearpicker-items " data-view="yearpicker-items">2018</li> 
-                            <li class="yearpicker-items " data-view="yearpicker-items">2019</li> 
-                            <li class="yearpicker-items " data-view="yearpicker-items">2020</li> 
-                            <li class="yearpicker-items selected" data-view="yearpicker-items">2021</li>
-                            <li class="yearpicker-items " data-view="yearpicker-items">2022</li>
-                            <li class="yearpicker-items " data-view="yearpicker-items">2023</li> 
-                            <li class="yearpicker-items " data-view="yearpicker-items">2024</li> 
-                            <li class="yearpicker-items " data-view="yearpicker-items">2025</li> 
-                            <li class="yearpicker-items " data-view="yearpicker-items">2026</li> 
-                            <li class="yearpicker-items " data-view="yearpicker-items">2027</li> -->
-                        <!-- </ul> -->
-                    <!-- </div> -->
-                <!-- <input type="month" name="date-range" id="start" min="1980" max="2020" value="2010"> ~
-				<input type="number" name="date-range" id="end" min="1980" max="2020" value="2015"> -->
-			    <!-- </div> -->
+				<div  class = 'set-years'> 
+					기간 
+					<input type="text" autocomplete="off" class="yearpicker  a" id= 'start'> ~
+				</div>
+				<div  class = 'set-years'>
+                	<input type="text" autocomplete="off" class="yearpicker  b" id="end" > 
+				</div>
             </div>
-
 			<div id='sel_country' style="line-height:170%">
 				<label>국가</label>
-				<input type="checkbox" name="countryAll" id="coun_all" onclick='selectAll2(this)' >전체
+				<input type="checkbox" name="countryAll" id="coun_all" onclick='selectAll2(this)' checked>전체
 				<input type="checkbox" name="country" id="한국"value="22041011" onclick='check2(this)' checked>한국
 				<input type="checkbox" name="country" id="미국"value="22042002" onclick='check2(this)' checked>미국
 				<input type="checkbox" name="country" id="영국"value="22044010" onclick='check2(this)' checked>영국
-				<input type="checkbox" name="country" id="일본"value="22041008" onclick='check2(this)' >일본
-				<input type="checkbox" name="country" id="중국"value="22041009" onclick='check2(this)' >중국
+				<input type="checkbox" name="country" id="일본"value="22041008" onclick='check2(this)' checked >일본
+				<input type="checkbox" name="country" id="중국"value="22041009" onclick='check2(this)' checked>중국
 			</div>
-
 			<div id='sel_genre' style="line-height:200%">
 				<label>장르</label>
 				<input type="checkbox" name="genreAll" id="gen_all" onclick='selectAll(this)'checked >전체
@@ -79,6 +51,7 @@
 				<input type="checkbox" name="genre" id="gen_sf" value="SF" onclick='check(this)' checked>SF
 				<input type="checkbox" name="genre" id="gen_drama" value="드라마" onclick='check(this)' checked> 드라마
 			</div>
+
 			<div id='sel_type' style="line-height:170%">
 				<label>유형</label>
 				<input type="checkbox" name="typeAll" id="type_all" onclick='selectAll3(this)'checked >전체
@@ -86,15 +59,15 @@
 				<input type="checkbox" name="type" id="단편" value="220102" onclick='check3(this)' checked>단편
 				<input type="checkbox" name="type" id="옴니버스" value="220103" onclick='check3(this)' checked>옴니버스
 			</div>
-		</fieldset>
+		</fieldset> 
 
-        <button class="btn" id="display">그래프 출력</button>
-	</div>
+        <button class="btn" id="display">그래프 출력</button> 
+	</div> 
 
     <div id="result">
 		<h2>그래프 결과</h2>
 		<div id="loading"></div>
-
+		
 		<fieldset class="field" id="set-chart" onclick="shape(this)">
 			<legend>그래프 설정</legend>
 			<input type="radio" name="chart" id="chart_line"value="line" checked>선 그래프
@@ -102,15 +75,22 @@
 			<input type="radio" name="chart" id="chart_bar"value="bar" >막대 그래프
 		</fieldset>
 
-		<div id="result_chart">
-            <div id="fade" class="black_background"  >
-            <div class="loadingio-spinner-wedges-ynx2h61thk"><div class="ldio-2hgux1lg16z">
-                <div><div><div></div></div><div><div></div></div><div><div></div></div><div><div></div></div></div>
-                </div>
-            </div>   
-            </div>   
-            <div id="chart_div">
-                <canvas id="line-chart" width=400 height="300"></canvas>
+		<div id="result_chart" >
+            <div id="fade" class="black_background" >
+	            <div id="light" class="loadingio-spinner-wedges-ynx2h61thk">
+					<div class="ldio-2hgux1lg16z">
+						<div>
+							<div><div></div></div>
+							<div><div></div></div>
+							<div><div></div></div>
+							<div><div></div></div>
+						</div>
+					</div>
+				</div>
+			</div>   
+            
+			<div id="chart_div">
+                <canvas id="line-chart" width="100" height="100"></canvas> 
             </div>
 		</div>
 
@@ -119,7 +99,7 @@
 			<button class="btn" id="save_xlsx">.xlsx로 저장</button>
 		</div>
 	</div>
-
+ 
     <script src="https://code.jquery.com/jquery-3.6.0.js"
         integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
 
@@ -130,7 +110,6 @@
 	<script src="yearpicker.js"></script>
 	<script src="html2canvas.js"></script>
 
-
-  
+	 
 </body>
 </html>
